# thermal-conductivity-evaluators

./: CMakeLists.txt  README.md
cmake/: embed_kernel.cmake
include/: Fenotype.h  GraphicsUtils.h  ParallelHeatSimulation.h  SequentialHeatSimulation.h  Simulation.h  SystemLayout.h  Types.h
kernels/: simulation_kernel.cl  simulation_kernel2.cl  simulation_kernel_global_column_wise.cl  simulation_kernel_global_stripped_column_wise.cl  simulation_kernel_private_column_wise.cl
src/: GraphicsUtils.cpp  ParallelHeatSimulation.cpp  SequentialHeatSimulation.cpp  Simulation.cpp
tests/: CMakeLists.txt  test_parallel_simulation.cpp  test_sequential.cpp  test_simulation.cpp  test_simulation_comparison.cpp
